--- a/index.html
+++ b/index.html
@@ -65,26 +65,31 @@
             border-radius: 4px;
             width: 250px;
         }
+        /* Style chung cho cả 2 nút */
         .action-button {
             display: block;
             width: 100%;
             padding: 15px;
-            background-color: #007bff;
-            color: white;
             border: none;
             border-radius: 5px;
             font-size: 1.1em;
             cursor: pointer;
             margin-top: 20px;
             text-align: center;
+            transition: background-color 0.3s;
         }
-        .action-button:hover {
+        #btn-submit {
+            background-color: #007bff;
+            color: white;
+        }
+        #btn-submit:hover {
             background-color: #0056b3;
         }
         #btn-retake {
             background-color: #28a745; /* Màu xanh lá cho nút làm lại */
+            color: white;
             margin-top: 10px;
-            display: none; /* Ẩn ban đầu */
+            display: none; /* Ẩn ban đầu, chỉ hiện khi nộp bài */
         }
         #btn-retake:hover {
             background-color: #1e7e34;
@@ -133,8 +138,10 @@
     <form id="quiz-form">
         </form>
 
-    <button type="button" class="action-button" id="btn-submit" onclick="submitQuiz()">Nộp Bài</button>
-    <button type="button" class="action-button" id="btn-retake" onclick="window.location.reload()">Làm Lại</button>
+    <div id="action-buttons">
+        <button type="button" class="action-button" id="btn-submit" onclick="submitQuiz()">Nộp Bài</button>
+        <button type="button" class="action-button" id="btn-retake" onclick="window.location.reload()">Làm Lại</button>
+    </div>
 
     <div id="result-area">
         <h2>KẾT QUẢ BÀI LÀM</h2>
@@ -147,126 +154,27 @@
 
 <script>
     const quizData = [
-        {
-            // Cộng (mẫu chung nhỏ)
-            question: "\\(\\frac{1}{2} + \\frac{1}{3}\\)",
-            options: ["\\(\\frac{2}{5}\\)", "\\(\\frac{5}{6}\\)", "\\(\\frac{3}{5}\\)", "\\(\\frac{6}{5}\\)"],
-            answer: "\\(\\frac{5}{6}\\)"
-        },
-        {
-            // Trừ (mẫu chung lớn)
-            question: "\\(\\frac{5}{7} - \\frac{2}{21}\\)",
-            options: ["\\(\\frac{3}{14}\\)", "\\(\\frac{13}{21}\\)", "\\(\\frac{11}{14}\\)", "\\(\\frac{10}{21}\\)"],
-            answer: "\\(\\frac{13}{21}\\)"
-        },
-        {
-            // Nhân (rút gọn)
-            question: "\\(\\frac{3}{4} \\cdot \\left(-\\frac{8}{9}\\right)\\)",
-            options: ["\\(-\\frac{2}{3}\\)", "\\(-\\frac{5}{13}\\)", "\\(-\\frac{24}{36}\\)", "\\(\\frac{2}{3}\\)"],
-            answer: "\\(-\\frac{2}{3}\\)"
-        },
-        {
-            // Chia (rút gọn)
-            question: "\\(\\frac{15}{16} : \\frac{3}{8}\\)",
-            options: ["\\(\\frac{5}{2}\\)", "\\(\\frac{45}{128}\\)", "\\(\\frac{5}{4}\\)", "\\(\\frac{2}{5}\\)"],
-            answer: "\\(\\frac{5}{2}\\)"
-        },
-        {
-            // Cộng với số âm
-            question: "\\(-\\frac{3}{5} + \\left(-\\frac{1}{5}\\right)\\)",
-            options: ["\\(\\frac{4}{5}\\)", "\\(-\\frac{4}{5}\\)", "\\(-\\frac{2}{5}\\)", "\\(\\frac{2}{5}\\)"],
-            answer: "\\(-\\frac{4}{5}\\)"
-        },
-        {
-            // Trừ số âm
-            question: "\\(\\frac{1}{4} - \\left(-\\frac{3}{4}\\right)\\)",
-            options: ["\\(-1\\)", "\\(\\frac{1}{2}\\)", "\\(1\\)", "\\(-\\frac{1}{2}\\)"],
-            answer: "\\(1\\)"
-        },
-        {
-            // Nhân với số âm
-            question: "\\(-2 \\cdot \\frac{5}{8}\\)",
-            options: ["\\(-\\frac{5}{4}\\)", "\\(\\frac{10}{8}\\)", "\\(-\\frac{4}{5}\\)", "\\(\\frac{5}{4}\\)"],
-            answer: "\\(-\\frac{5}{4}\\)"
-        },
-        {
-            // Chia với số âm
-            question: "\\(-\\frac{9}{10} : \\left(-\\frac{3}{5}\\right)\\)",
-            options: ["\\(-\\frac{3}{2}\\)", "\\(\\frac{3}{2}\\)", "\\(\\frac{27}{50}\\)", "\\(-\\frac{50}{27}\\)"],
-            answer: "\\(\\frac{3}{2}\\)"
-        },
-        {
-            // Cộng (tìm mẫu chung)
-            question: "\\(\\frac{7}{10} + 0.3\\)",
-            options: ["\\(1\\)", "\\(0.73\\)", "\\(\\frac{73}{100}\\)", "\\(\\frac{1}{10}\\)"],
-            answer: "\\(1\\)" // 0.7 + 0.3 = 1
-        },
-        {
-            // Trừ số thập phân
-            question: "\\(2.5 - \\frac{3}{2}\\)",
-            options: ["\\(1\\)", "\\(1.5\\)", "\\(0.5\\)", "\\(2\\)"],
-            answer: "\\(1\\)" // 2.5 - 1.5 = 1
-        },
-        {
-            // Nhân với số thập phân
-            question: "\\(\\frac{4}{5} \\cdot (-1.25)\\)",
-            options: ["\\(-1\\)", "\\(-1.05\\)", "\\(-\\frac{3}{4}\\)", "\\(\\frac{4}{5}\\)"],
-            answer: "\\(-1\\)" // 0.8 * (-1.25) = -1
-        },
-        {
-            // Chia với số thập phân
-            question: "\\(-0.5 : \\frac{1}{4}\\)",
-            options: ["\\(-2\\)", "\\(-0.125\\)", "\\(2\\)", "\\(0.125\\)"],
-            answer: "\\(-2\\)" // -0.5 / 0.25 = -2
-        },
-        {
-            // Phép tính kết hợp (cộng, trừ)
-            question: "\\(\\frac{1}{6} - \\frac{2}{3} + \\frac{1}{2}\\)",
-            options: ["\\(\\frac{1}{3}\\)", "\\(0\\)", "\\(\\frac{1}{6}\\)", "\\(-\\frac{1}{6}\\)"],
-            answer: "\\(0\\)" // 1/6 - 4/6 + 3/6 = 0/6 = 0
-        },
-        {
-            // Phép tính kết hợp (nhân, chia)
-            question: "\\(\\left(-\\frac{5}{6}\\right) \\cdot \\frac{3}{10} : \\frac{1}{4}\\)",
-            options: ["\\(-1\\)", "\\(-\\frac{1}{4}\\)", "\\(-\\frac{3}{4}\\)", "\\(-\\frac{4}{5}\\)"],
-            answer: "\\(-1\\)" // -5/6 * 3/10 * 4 = -1/4 * 4 = -1
-        },
-        {
-            // Cộng với số nguyên
-            question: "\\(3 + \\left(-\\frac{5}{4}\\right)\\)",
-            options: ["\\(\\frac{7}{4}\\)", "\\(\\frac{17}{4}\\)", "\\(2\\)", "\\(\\frac{1}{4}\\)"],
-            answer: "\\(\\frac{7}{4}\\)" // 12/4 - 5/4 = 7/4
-        },
-        {
-            // Trừ số nguyên
-            question: "\\(1 - 0.75\\)",
-            options: ["\\(\\frac{1}{2}\\)", "\\(0.5\\)", "\\(0.25\\)", "\\(0.15\\)"],
-            answer: "\\(0.25\\)"
-        },
-        {
-            // Nhân với số nguyên
-            question: "\\(-4 \\cdot \\left(-\\frac{7}{12}\\right)\\)",
-            options: ["\\(\\frac{7}{3}\\)", "\\(-\\frac{7}{3}\\)", "\\(\\frac{28}{12}\\)", "\\(1\\)"],
-            answer: "\\(\\frac{7}{3}\\)" // 28/12 = 7/3
-        },
-        {
-            // Chia với số nguyên
-            question: "\\(5 : \\left(-\\frac{10}{3}\\right)\\)",
-            options: ["\\(-\\frac{2}{3}\\)", "\\(-\\frac{3}{2}\\)", "\\(\\frac{3}{2}\\)", "\\(1\\)"],
-            answer: "\\(-\\frac{3}{2}\\)" // 5 * (-3/10) = -15/10 = -3/2
-        },
-        {
-            // Phép tính kết hợp (dấu ngoặc)
-            question: "\\(\\frac{2}{3} \\cdot \\left(\\frac{1}{4} + \\frac{5}{4}\\right)\\)",
-            options: ["\\(\\frac{4}{3}\\)", "\\(1\\)", "\\(\\frac{2}{3}\\)", "\\(\\frac{6}{7}\\)"],
-            answer: "\\(1\\)" // 2/3 * (6/4) = 2/3 * 3/2 = 1
-        },
-        {
-            // Phép tính kết hợp khó hơn
-            question: "\\(\\left(\\frac{1}{2} - \\frac{1}{3}\\right) : \\frac{1}{6}\\)",
-            options: ["\\(1\\)", "\\(0\\)", "\\(6\\)", "\\(\\frac{1}{36}\\)"],
-            answer: "\\(1\\)" // (3/6 - 2/6) : 1/6 = 1/6 : 1/6 = 1
-        }
+        // Dữ liệu 20 câu hỏi về Số Hữu Tỉ
+        { question: "\\(\\frac{1}{2} + \\frac{1}{3}\\)", options: ["\\(\\frac{2}{5}\\)", "\\(\\frac{5}{6}\\)", "\\(\\frac{3}{5}\\)", "\\(\\frac{6}{5}\\)"], answer: "\\(\\frac{5}{6}\\)" },
+        { question: "\\(\\frac{5}{7} - \\frac{2}{21}\\)", options: ["\\(\\frac{3}{14}\\)", "\\(\\frac{13}{21}\\)", "\\(\\frac{11}{14}\\)", "\\(\\frac{10}{21}\\)"], answer: "\\(\\frac{13}{21}\\)" },
+        { question: "\\(\\frac{3}{4} \\cdot \\left(-\\frac{8}{9}\\right)\\)", options: ["\\(-\\frac{2}{3}\\)", "\\(-\\frac{5}{13}\\)", "\\(-\\frac{24}{36}\\)", "\\(\\frac{2}{3}\\)"], answer: "\\(-\\frac{2}{3}\\)" },
+        { question: "\\(\\frac{15}{16} : \\frac{3}{8}\\)", options: ["\\(\\frac{5}{2}\\)", "\\(\\frac{45}{128}\\)", "\\(\\frac{5}{4}\\)", "\\(\\frac{2}{5}\\)"], answer: "\\(\\frac{5}{2}\\)" },
+        { question: "\\(-\\frac{3}{5} + \\left(-\\frac{1}{5}\\right)\\)", options: ["\\(\\frac{4}{5}\\)", "\\(-\\frac{4}{5}\\)", "\\(-\\frac{2}{5}\\)", "\\(\\frac{2}{5}\\)"], answer: "\\(-\\frac{4}{5}\\)" },
+        { question: "\\(\\frac{1}{4} - \\left(-\\frac{3}{4}\\right)\\)", options: ["\\(-1\\)", "\\(\\frac{1}{2}\\)", "\\(1\\)", "\\(-\\frac{1}{2}\\)"], answer: "\\(1\\)" },
+        { question: "\\(-2 \\cdot \\frac{5}{8}\\)", options: ["\\(-\\frac{5}{4}\\)", "\\(\\frac{10}{8}\\)", "\\(-\\frac{4}{5}\\)", "\\(\\frac{5}{4}\\)"], answer: "\\(-\\frac{5}{4}\\)" },
+        { question: "\\(-\\frac{9}{10} : \\left(-\\frac{3}{5}\\right)\\)", options: ["\\(-\\frac{3}{2}\\)", "\\(\\frac{3}{2}\\)", "\\(\\frac{27}{50}\\)", "\\(-\\frac{50}{27}\\)"], answer: "\\(\\frac{3}{2}\\)" },
+        { question: "\\(\\frac{7}{10} + 0.3\\)", options: ["\\(1\\)", "\\(0.73\\)", "\\(\\frac{73}{100}\\)", "\\(\\frac{1}{10}\\)"], answer: "\\(1\\)" },
+        { question: "\\(2.5 - \\frac{3}{2}\\)", options: ["\\(1\\)", "\\(1.5\\)", "\\(0.5\\)", "\\(2\\)"], answer: "\\(1\\)" },
+        { question: "\\(\\frac{4}{5} \\cdot (-1.25)\\)", options: ["\\(-1\\)", "\\(-1.05\\)", "\\(-\\frac{3}{4}\\)", "\\(\\frac{4}{5}\\)"], answer: "\\(-1\\)" },
+        { question: "\\(-0.5 : \\frac{1}{4}\\)", options: ["\\(-2\\)", "\\(-0.125\\)", "\\(2\\)", "\\(0.125\\)"], answer: "\\(-2\\)" },
+        { question: "\\(\\frac{1}{6} - \\frac{2}{3} + \\frac{1}{2}\\)", options: ["\\(\\frac{1}{3}\\)", "\\(0\\)", "\\(\\frac{1}{6}\\)", "\\(-\\frac{1}{6}\\)"], answer: "\\(0\\)" },
+        { question: "\\(\\left(-\\frac{5}{6}\\right) \\cdot \\frac{3}{10} : \\frac{1}{4}\\)", options: ["\\(-1\\)", "\\(-\\frac{1}{4}\\)", "\\(-\\frac{3}{4}\\)", "\\(-\\frac{4}{5}\\)"], answer: "\\(-1\\)" },
+        { question: "\\(3 + \\left(-\\frac{5}{4}\\right)\\)", options: ["\\(\\frac{7}{4}\\)", "\\(\\frac{17}{4}\\)", "\\(2\\)", "\\(\\frac{1}{4}\\)"], answer: "\\(\\frac{7}{4}\\)" },
+        { question: "\\(1 - 0.75\\)", options: ["\\(\\frac{1}{2}\\)", "\\(0.5\\)", "\\(0.25\\)", "\\(0.15\\)"], answer: "\\(0.25\\)" },
+        { question: "\\(-4 \\cdot \\left(-\\frac{7}{12}\\right)\\)", options: ["\\(\\frac{7}{3}\\)", "\\(-\\frac{7}{3}\\)", "\\(\\frac{28}{12}\\)", "\\(1\\)"], answer: "\\(\\frac{7}{3}\\)" },
+        { question: "\\(5 : \\left(-\\frac{10}{3}\\right)\\)", options: ["\\(-\\frac{2}{3}\\)", "\\(-\\frac{3}{2}\\)", "\\(\\frac{3}{2}\\)", "\\(1\\)"], answer: "\\(-\\frac{3}{2}\\)" },
+        { question: "\\(\\frac{2}{3} \\cdot \\left(\\frac{1}{4} + \\frac{5}{4}\\right)\\)", options: ["\\(\\frac{4}{3}\\)", "\\(1\\)", "\\(\\frac{2}{3}\\)", "\\(\\frac{6}{7}\\)"], answer: "\\(1\\)" },
+        { question: "\\(\\left(\\frac{1}{2} - \\frac{1}{3}\\right) : \\frac{1}{6}\\)", options: ["\\(1\\)", "\\(0\\)", "\\(6\\)", "\\(\\frac{1}{36}\\)"], answer: "\\(1\\)" }
     ];
 
     const quizForm = document.getElementById('quiz-form');
@@ -285,7 +193,6 @@
             const questionDiv = document.createElement('div');
             questionDiv.className = 'question';
             
-            // Số thứ tự và công thức LaTeX
             const questionText = document.createElement('p');
             questionText.innerHTML = `Câu ${index + 1}: Giải biểu thức ${item.question}`;
             questionDiv.appendChild(questionText);
@@ -293,7 +200,6 @@
             const optionsDiv = document.createElement('div');
             optionsDiv.className = 'options';
 
-            // Xáo trộn thứ tự đáp án (để tránh đáp án đúng luôn ở vị trí cố định)
             const shuffledOptions = shuffleArray([...item.options]);
 
             shuffledOptions.forEach((option, optionIndex) => {
@@ -364,13 +270,13 @@
         if (name === "" || className === "") {
             alert("Vui lòng nhập đầy đủ Họ và Tên cùng Lớp trước khi nộp bài!");
             quizSubmitted = false;
-            startTimer(); // Tiếp tục đếm ngược nếu chưa nộp được
+            if (!timeOut) startTimer(); // Tiếp tục đếm ngược nếu chưa nộp được
             return;
         }
 
         let score = 0;
         const endTime = Date.now();
-        const timeTaken = Math.floor((endTime - startTime) / 1000); // Thời gian làm bài tính bằng giây
+        const timeTaken = Math.floor((endTime - startTime) / 1000); 
         
         // Chấm điểm
         quizData.forEach((item, index) => {
@@ -399,35 +305,10 @@
         submitButton.style.display = 'none';
         retakeButton.style.display = 'block';
 
-        // *************************************************************************
-        // PHẦN GỬI BÁO CÁO KẾT QUẢ (Cần Server-side)
-        // Đây là nơi bạn sẽ thêm code JavaScript để gửi dữ liệu lên server (sử dụng AJAX/Fetch)
-        /*
-        const resultData = {
-            name: name,
-            className: className,
-            score: score,
-            timeTaken: timeTaken, // tính bằng giây
-            isTimeout: timeOut
-        };
+        // Khóa các trường nhập tên/lớp
+        document.getElementById('student-name').readOnly = true;
+        document.getElementById('student-class').readOnly = true;
 
-        // Ví dụ: Gửi dữ liệu đến một endpoint 'submit_quiz.php'
-        fetch('submit_quiz.php', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-            },
-            body: JSON.stringify(resultData),
-        })
-        .then(response => response.json())
-        .then(data => {
-            console.log('Server response:', data);
-        })
-        .catch((error) => {
-            console.error('Error submitting quiz results:', error);
-        });
-        */
-        // *************************************************************************
 
         // Cuộn lên kết quả
         document.getElementById('result-area').scrollIntoView({ behavior: 'smooth' });
